# qbsolv

./: CMakeLists.txt
cmd/: readqubo.c
examples/: factoring.bash
